Don't filter the federated credentials in the account chooser.

The filtering was introduced in https://codereview.chromium.org/2277793002

BUG=653364

Review-Url: https://codereview.chromium.org/2398863003
Cr-Commit-Position: refs/heads/master@{#423588}

Former-commit-id: 641e5161d080e498899a4758608febdeba45e64c